--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Test</title>
   </head>
   <body>
-    <h1>Matthew Mosinski</h1>
+    <h1><strong>Matthew Mosinski</strong></h1>
+    <h2><strong>Lab 1</strong><h2>
     <h5>Test Content Here...Added this...and here.</h5>
     
     Stuff goes here...
