--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css">
-    <title>Test</title>
+    <title>Lab 1</title>
   </head>
   <body>
     <h1><strong>Matthew Mosinski</strong></h1>
